--- a/conf/proxysql-binlog.cnf
+++ b/conf/proxysql-binlog.cnf
@@ -1,13 +1,13 @@
 [general]
-listen_address = "0.0.0.0:999"
+listen_address = "0.0.0.0:3310"
 log_file = "/var/log/proxysql-binlog/proxysql-binlog.log"
 log_level = "info"
 
 [mysql]
-host = "ed-c4-173-29"
+host = "localhost"
 port = 3306
-user = "rslave"
-password = "RQL0jLL8lO6rLl"
+user = "slave"
+password = "slavepassword"
 
 [metrics]
 listen_address = "0.0.0.0:9056"
